force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/bofc__BOFCFieldsAnalyzer__c.object-meta.xml
<CustomObject>
    <label>BOFCFieldsAnalyzer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>