force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>bofc__Last_Analyzed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Analyzed</label>
    <type>DateTime</type>
</CustomField>