force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Object_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>